flex-col used to center bug in cards too big vertically.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,10 +8,8 @@
 
 /* You can add custom styles below if needed */
 
-#bg-div {
-  position: fixed;
-  width: 100%;
-  height: 100%;
+.bg-div {
+  height: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
